--- a/App_practical/8_Calculator/appsettings.Development.json
+++ b/App_practical/8_Calculator/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5008"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
