--- a/App_practical/8_Calculator/appsettings.Development.json
+++ b/App_practical/8_Calculator/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=webdb;User=webdb;Password=password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
