--- a/App_practical/8_Calculator/appsettings.json
+++ b/App_practical/8_Calculator/appsettings.json
@@ -6,6 +6,9 @@
       }
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mariadb;Port=3306;Database=webdb;User=webdb;Password=password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
