--- a/App_practical/8_Calculator/appsettings.json
+++ b/App_practical/8_Calculator/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mariadb;Port=3306;Database=webdb;User=webdb;Password=password;"
+    "DefaultConnection": "Server=93.88.178.186;Port=5038;Database=8_WebCalculatorDb;Uid=root;Pwd=password;Character Set=utf8;ConvertZeroDatetime=True;"
   },
   "Logging": {
     "LogLevel": {
