--- a/App_practical/docker-compose.yml
+++ b/App_practical/docker-compose.yml
@@ -1,12 +1,12 @@
 services:     
   mariadb:
-    container_name: web-mariadb-3
+    container_name: web-mariadb-8
     hostname: mariadb
     image: mariadb:10.5
     restart: always
     environment:
       MARIADB_ROOT_PASSWORD: password
-      MARIADB_DATABASE: webdb
+      MARIADB_DATABASE: 8_WebCalculatorDb
       MARIADB_USER: webdb
       MARIADB_PASSWORD: password
     ports:
