--- a/App_practical/8_Calculator/appsettings.json
+++ b/App_practical/8_Calculator/appsettings.json
@@ -2,12 +2,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://0.0.0.0:5008"
+        "Url": "http://0.0.0.0:5008" // ← внутри контейнера на порту 5008
       }
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mariadb;Port=3306;Database=8_Calculator;User=webdb;Password=password;"
+    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=root;Pwd=password;"
   },
   "Logging": {
     "LogLevel": {
