--- a/App_practical/docker-compose.yml
+++ b/App_practical/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "0.0.0.0:5058:3306"
       
   web:
-    container_name: web-app-calculator
+    container_name: web-app-calculator-8
     hostname: app
     build: 8_Calculator/
     ports:
