--- a/App_practical/8_Calculator/appsettings.Development.json
+++ b/App_practical/8_Calculator/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=webdb;User=webdb;Password=password;"
+    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=root;Pwd=password;"
   },
   "Logging": {
     "LogLevel": {
