--- a/App_practical/8_Calculator/appsettings.Development.json
+++ b/App_practical/8_Calculator/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=root;Pwd=password;"
+    "DefaultConnection": "Server=mariadb;Port=3306;Database=8_WebCalculatorDb;Uid=webdb;Pwd=password;"
   },
   "Logging": {
     "LogLevel": {
