new_changes_two

--- a/App_practical/8_Calculator/appsettings.json
+++ b/App_practical/8_Calculator/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mariadb;Port=3306;Database=8_WebCalculatorDb;Uid=webdb;Pwd=password;"
+    "DefaultConnection": "Server=mariadb;Port=3306;Database=8_WebCalculatorDb;Uid=webdb;Pwd=password; Character Set=utf8;ConvertZeroDatetime=True;"
   },
   "Logging": {
     "LogLevel": {
