--- a/App_practical/8_Calculator/appsettings.json
+++ b/App_practical/8_Calculator/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mariadb;Port=3306;Database=8_WebCalculatorDb;Uid=webdb;Pwd=password; Character Set=utf8;ConvertZeroDatetime=True;"
+    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=webdb;Pwd=password; Character Set=utf8;ConvertZeroDatetime=True;"
   },
   "Logging": {
     "LogLevel": {
