--- a/App_practical/8_Calculator/appsettings.Development.json
+++ b/App_practical/8_Calculator/appsettings.Development.json
@@ -1,11 +1,35 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5008"
+      }
+    }
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=root;Pwd=password;"
+    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=root;Pwd=password;Character Set=utf8;ConvertZeroDatetime=True;"
+  },
+  "Kafka": {
+    "ProducerSettings": {
+      "BootstrapServers": "93.88.178.186:9094",
+      "SaslMechanism": "Plain",
+      "SecurityProtocol": "Plaintext"
+    },
+    "ConsumerSettings": {
+      "BootstrapServers": "93.88.178.186:9094",
+      "GroupId": "nazina",
+      "SaslMechanism": "Plain",
+      "SecurityProtocol": "Plaintext",
+      "AutoOffsetReset": "Earliest",
+      "EnableAutoCommit": true
+    },
+    "TopicName": "nazina"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
