--- a/App_practical/8_Calculator/appsettings.json
+++ b/App_practical/8_Calculator/appsettings.json
@@ -7,7 +7,23 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=root;Pwd=password;"
+    "DefaultConnection": "Server=93.88.178.186;Port=5058;Database=8_WebCalculatorDb;Uid=root;Pwd=password;Character Set=utf8;ConvertZeroDatetime=True;"
+  },
+  "Kafka": {
+    "ProducerSettings": {
+      "BootstrapServers": "93.88.178.186:9094",
+      "SaslMechanism": "Plain",
+      "SecurityProtocol": "Plaintext"
+    },
+    "ConsumerSettings": {
+      "BootstrapServers": "93.88.178.186:9094",
+      "GroupId": "nazina",
+      "SaslMechanism": "Plain",
+      "SecurityProtocol": "Plaintext",
+      "AutoOffsetReset": "Earliest",
+      "EnableAutoCommit": true
+    },
+    "TopicName": "nazina"
   },
   "Logging": {
     "LogLevel": {
